<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/bottom_safe_area">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_subtitle"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/section_gap" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:hint="@string/activity_hint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/control_gap"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/auto_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:layout_marginBottom="@dimen/control_gap" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_type"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/control_gap">

            <RadioButton
                android:id="@+id/radio_indoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indoor" />

            <RadioButton
                android:id="@+id/radio_outdoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoor"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bring"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/control_gap">

            <CheckBox
                android:id="@+id/check_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water" />

            <CheckBox
                android:id="@+id/check_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

            <CheckBox
                android:id="@+id/check_snacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snacks" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            android:layout_marginBottom="@dimen/control_gap" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/control_gap">

            <Button
                android:id="@+id/button_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_time"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:checked="true"
            android:minHeight="48dp"
            android:layout_marginBottom="@dimen/control_gap" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excitement"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/control_gap" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_plan"
            android:minHeight="48dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:layout_marginBottom="@dimen/section_gap"
            android:background="@color/result_background"
            android:padding="@dimen/result_padding"
            android:text="@string/result_placeholder"
            android:textSize="@dimen/result_size" />

    </LinearLayout>

</ScrollView>